# docker-django-wiki

./: .dockerignore  .gitignore  Dockerfile  README  django-wiki-tests.sh  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: docker-build-test.yml  docker-publish.yml
root/: requirements.txt
root/etc/nginx/: nginx.conf
root/etc/s6-overlay/s6-rc.d/init-collectstatic-config/: run  up
root/etc/s6-overlay/s6-rc.d/init-db-config/: run  up
root/etc/uwsgi/: uwsgi.ini
root/the_wiki/: manage.py  pyproject.toml
root/the_wiki/article_tags/: __init__.py  admin.py  apps.py  checks.py  forms.py  models.py  settings.py  wiki_plugin.py
root/the_wiki/article_tags/migrations/: 0001_initial.py
root/the_wiki/article_tags/templates/article_tags/: sidebar.html
root/the_wiki/article_tags/templatetags/: article_tags_extras.py
root/the_wiki/templates/wiki/: article.html
root/the_wiki/the_help/: apps.py
root/the_wiki/the_help/management/commands/: initadmin.py
root/the_wiki/the_wiki/: asgi.py  middleware.py  settings.py  settings_unittest.py  urls.py  wsgi.py
root/the_wiki/wiki_api/: __init__.py  apps.py  renderers.py  schema.yml  serializers.py  tests.py  types.py  urls.py  views.py
root/the_wiki/wiki_api/fixtures/: 1-content-types.yaml  2-permissions.yaml  3-groups.yaml  4-users.yaml  5-articles.yaml
root/the_wiki/wiki_api/serializers/: __init__.py  articles.py  attachments.py  groups.py  urls.py  users.py
root/the_wiki/wiki_api/views/: __init__.py  articles.py  attachments.py  groups.py  urls.py  users.py
(+8 files in other folders)
