[project]
name = "Docker Django Wiki"
version = "1.0.0"
description = "A dockerized django-wiki application with some sensible defaults and building off of the LinuxServer base image"
license = "MIT"
authors = [
    "The Tempting Savior <TheTemptingSavior@protonmail.com>"
]
maintainers = [
    "The Tempting Savior <TheTemptingSavior@protonmail.com>"
]
readme = "../../README.md"
repository = "https://github.com/TheTemptingSavior/docker-django-wiki"
dependencies = [
    "asgiref==3.7.2",
    "bleach==6.1.0",
    "Django==4.2.7",
    "django-classy-tags==4.1.0",
    "django-js-asset==2.1.0",
    "django-mptt==0.14.0",
    "django-nyt==1.3",
    "django-sekizai==4.1.0",
    "Markdown==3.3.7",
    "Pillow==10.2.0",
    "six==1.16.0",
    "sorl-thumbnail==12.10.0",
    "sqlparse==0.4.4",
    "tinycss2==1.1.1",
    "uWSGI==2.0.22",
    "webencodings==0.5.1",
    "wiki==0.10"
]

[project.optional-dependencies]
test = [
    "hatch"
]
dev = [
    "black==23.11.0"
]
postgres = [
    "psycopg2-binary==2.9.9"
]

[tool.black]
line-length = 119
target-version = ["py310"]
include = '\.pyi?$'
